--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.username=Your username
+spring.datasource.password=Your Password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=sahoomanisha2343@gmail.com
-spring.mail.password=ysouarxiffwezkey
+spring.mail.username=Your Email
+spring.mail.password=Your Password
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
